<resources>
    <string name="app_name">72G游戏助手</string>

    <string name="experience">立即体验</string>

    <string name="present">礼包</string>
    <string name="mime">我的</string>
    <string name="money">赚钱</string>
    <string name="game">小游戏</string>
    <string name="activity">活动</string>


    <string name="first_searchgame">搜游戏</string>
    <string name="present1">手游礼包</string>
    <string name="present2">页游礼包</string>
    <string name="noinfo">暂时没有新的消息</string>


    <string name="areaactivity">社区活动</string>
    <string name="first_searchpresent">搜礼包</string>
    <string name="hotgiven">热门推荐</string>
    <string name="newgiven">最新推荐</string>
    <string name="goal">签到得分</string>
    <string name="info">我的信息</string>
    <string name="login">点击登录</string>
    <string name="login2">点击登录，玩游戏赚U币</string>
    <string name="change">兑换</string>
    <string name="play">试玩</string>
    <string name="left">剩余：</string>
    <string name="task">我的任务</string>
    <string name="friend">邀请好友</string>
    <string name="setting">系统设置</string>
    <string name="first_searchgame2">搜游戏</string>
    <string name="activityjoin">人参加</string>
    <string name="gift1">最新奖品</string>
    <string name="gift2">最热奖品</string>
    <string name="value">价值:</string>
    <string name="wechat">微信抢红包</string>
    <string name="game1">休闲小游戏</string>

    <string name="umoney">玩游戏,赚U币</string>
    <string name="download">立即下载</string>
    <string name="fenshu">积分商城</string>
    <string name="todaytask">今日任务</string>
    <string name="getaccount">淘号</string>
    <string name="giveget">兑换</string>
    <string name="down_load">人下载</string>
    <string name="downloadnow">立即下载</string>
    <string name="giftdetail">礼包详情</string>
    <string name="type">类型 :</string>
    <string name="size">大小 ：</string>
    <string name="loadgame">下载游戏</string>
    <string name="user_login">用户登录</string>
    <string name="register">注册</string>
    <string name="tel_input">请输入手机号</string>
    <string name="password_input">请输入密码</string>
    <string name="autologin">下次自动登录</string>
    <string name="forgetpassword">忘记密码了？</string>
    <string name="totallogin">登录</string>
    <string name="calltel">登陆异常，请联系客服：QQ800077265</string>
    <string name="user_register">用户注册</string>
    <string name="othername">请输入昵称</string>
    <string name="invite_input">请输入邀请码（非必填项）</string>
    <string name="read">我已阅读并接受注册协议</string>
    <string name="next">下一步</string>
    <string name="giftcontent">礼包内容</string>
    <string name="getway">领取方式</string>
    <string name="leftsize">剩余量:</string>
    <string name="startend">有效期:</string>
    <string name="best">适用于：</string>
    <string name="gamedetail">游戏详情</string>
    <string name="activitydetail">活动详情</string>
    <string name="speak">评论</string>
    <string name="weibo">微博</string>
    <string name="qqfriend">QQ好友</string>
    <string name="friendcircle">朋友圈</string>
    <string name="weichat">微信</string>
    <string name="cancel">取消</string>
    <string name="prizedetail">奖品详情</string>
    <string name="remain">剩余数量：</string>
    <string name="version">版本：</string>
    <string name="gameinfo">游戏信息</string>
    <string name="gamespeak">游戏评论</string>
    <string name="gamegift">游戏礼包</string>
    <string name="submit">提交</string>
    <string name="load">下载</string>
    <string name="gameshow">游戏介绍</string>
    <string name="publish">发表</string>
    <string name="which">第</string>
    <string name="whichfloor">楼</string>
    <string name="theonefloor">指定楼层</string>
    <string name="partspeak">部分评论</string>
    <string name="guessyoulike">猜你喜欢</string>
    <string name="finish">完成</string>
    <string name="tel_correct">手机号验证</string>
    <string name="correct_input">请输入验证码</string>
    <string name="tel">手机号：</string>
    <string name="get">获取验证码</string>
    <string name="unfinish">未完成</string>
    <string name="publishspeak">发表评论</string>
    <string name="smallgame">休闲小游戏</string>
    <string name="nootnerinfo">暂时没有相关礼包数据</string>
    <string name="delete">安装完成后删除安装包</string>
    <string name="clearbuffer">清除缓存</string>
    <string name="update">检查更新</string>
    <string name="say">意见反馈</string>
    <string name="about">关于我们</string>
    <string name="myplay">我的试玩</string>
    <string name="loadnow">正在下载</string>
    <string name="install">已经安装</string>
    <string name="getnum">立即领取</string>
    <string name="changeword">亲！你太前卫了，换个关键词搜索吧！</string>
</resources>
