<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/login_lin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ecedf0">

        <ImageView
            android:id="@+id/lastpage_loginuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:onClick="doUserLogin"
            android:src="@mipmap/ic_back_normal" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/user_login"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/nextpage_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:onClick="doUserLogin"
            android:text="@string/register"
            android:textColor="#0080f0"
            android:textSize="20sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/tel_edt"
        android:layout_width="320dp"
        android:layout_height="44dp"
        android:layout_below="@id/login_lin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#ecedf0"
        android:focusableInTouchMode="true"
        android:hint="@string/tel_input"
        android:paddingLeft="10dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/password_edt"
        android:layout_width="320dp"
        android:layout_height="44dp"
        android:layout_below="@id/tel_edt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#ecedf0"
        android:hint="@string/password_input"
        android:paddingLeft="10dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="15sp" />


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_edt"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:checked="true"
        android:text="@string/autologin" />

    <TextView
        android:id="@+id/forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/password_edt"
        android:layout_marginRight="25dp"
        android:layout_marginTop="18dp"
        android:onClick="doUserLogin"
        android:text="@string/forgetpassword"
        android:textColor="#0080f0" />

    <Button
        android:id="@+id/login_user"
        android:layout_width="320dp"
        android:layout_height="44dp"
        android:layout_below="@id/password_edt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="doUserLogin"
        android:text="@string/totallogin"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/calltel"
        android:textColor="#0080f0" />
</RelativeLayout>