<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:id="@+id/container_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/view"></FrameLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/radiogroup"
        android:layout_marginBottom="5dp"
        android:background="@android:color/darker_gray" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/firstPresentRbt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@mipmap/ic_menu_01_nor"
            android:gravity="center_horizontal"
            android:text="@string/present"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/secondActivityRbt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@mipmap/ic_menu_02_nor"
            android:gravity="center_horizontal"
            android:text="@string/activity"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/thirdGameRbt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@mipmap/ic_menu_03_nor"
            android:gravity="center_horizontal"
            android:text="@string/game"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/forthMoneyRbt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@mipmap/ic_menu_04_nor"
            android:gravity="center_horizontal"
            android:text="@string/money"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/fifthMineRbt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@mipmap/ic_menu_05_nor"
            android:gravity="center_horizontal"
            android:text="@string/mime"
            android:textSize="12sp" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/lin"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@mipmap/ic_menu_01_hl" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@mipmap/ic_menu_02_hl" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@mipmap/ic_menu_03_hl" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@mipmap/ic_menu_04_hl" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_weight="1"

            android:src="@mipmap/ic_menu_05_hl" />

    </LinearLayout>
</RelativeLayout>