<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rel_tel"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#ecedf0">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:src="@mipmap/ic_back_normal" />

        <TextView
            android:id="@+id/dotel_correct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/tel_correct"
            android:textColor="@android:color/black"
            android:textSize="25sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lin_telcorrect"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/rel_tel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="#ecedf0"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/tel"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/youtel_correct"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="13476673831"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/lin_telcorrect"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="#ecedf0">

        <EditText
            android:id="@+id/inputcorrect"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:hint="请输入验证码"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/getcorrect"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:background="#0080f0"
            android:gravity="center"
            android:text="@string/get"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/finish"
        android:layout_width="320dp"
        android:layout_height="37dp"
        android:layout_below="@id/lin_telcorrect"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:background="#0080f0"
        android:onClick="next"
        android:text="@string/finish"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</RelativeLayout>